--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu"
       crossorigin="anonymous"
     />
-    <title>fetch</title>
+    <title>Search Anything</title>
   </head>
   <body>
     <div class="container mt-5">
